# claude-daily

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  package-lock.json  package.json  prd.md
.claude/: ralph-loop.local.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
commands/: daily-get-command.md  daily-get-skill.md  daily-view.md
hooks/: hooks.json
scripts/: install.sh
site/: index.html
site/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
site/dashboard/src/: App.jsx  index.css
site/src/: App.jsx  App.tsx
site/src/components/: Docs.jsx  Docs.tsx  Show.tsx
site/src/data/: docs.js
src/: auto_summarize.rs  main.rs
src/archive/: daily.rs  manager.rs  mod.rs  session.rs  templates.rs
src/cli/: args.rs
src/cli/commands/: config.rs  digest.rs  extract.rs  init.rs  install.rs  jobs.rs  mod.rs  show.rs  summarize.rs  uninstall.rs  update.rs  view.rs
src/config/: mod.rs  settings.rs
src/hooks/: input.rs  mod.rs  session_end.rs  session_start.rs
src/jobs/: manager.rs  mod.rs
src/server/: dto.rs  handlers.rs  mod.rs  router.rs  static_files.rs
src/summarizer/: engine.rs  mod.rs  prompts.rs  template.rs
src/transcript/: mod.rs  parser.rs
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.jsx  App.tsx  index.css
web/src/components/: ArchiveLayout.tsx  ArchiveTree.tsx  DataFlowVisualization.jsx  JobCard.tsx  Layout.tsx  TemplateEditor.tsx
web/src/contexts/: ThemeContext.tsx
(+17 files in other folders)
