[package]
name = "daily"
version = "0.1.0"
edition = "2021"
authors = ["Oanakiaja <oanakiaja@gmail.com>"]
description = "Daily Context Archive System for Claude Code"
license = "MIT"
repository = "https://github.com/oanakiaja/claude-daily"
readme = "README.md"
keywords = ["claude-code", "archive", "productivity", "cli", "daily-log"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "daily"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
confy = "0.6"
dirs = "5.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal output
colored = "2.1"
termimad = "0.30"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Path handling
shellexpand = "3.1"

# Unix process control
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
